[project]
name = "mia203"
version = "0.1.0"
description = "Payments API with validation strategies and FastAPI"
authors = [
    { name = "María Luisa Boettner" },
    { name = "Hernán Marano" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
test = [
    "setuptools",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0" # Add coverage tool for better testing
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
